--- a/Ponderada 1 - Async/src/docker-compose.yaml
+++ b/Ponderada 1 - Async/src/docker-compose.yaml
@@ -6,6 +6,6 @@ services:
     ports:
       - "5000:5000"
     volumes:
-      - ./data:/app/data   # Mapping a local directory to store SQLite database file
+      - ./test.db:/app/test.db
     environment:
       - PYTHONUNBUFFERED=1
