--- a/Ponderada 3/src/nginx/nginx.conf
+++ b/Ponderada 3/src/nginx/nginx.conf
@@ -1,5 +1,3 @@
-# gateway/nginx.conf
-
 worker_processes 1;
 
 events { worker_connections 1024; }
@@ -7,25 +5,19 @@ events { worker_connections 1024; }
 http {
     sendfile on;
 
-    upstream Service01 {
-        server Service01:8001;
+    upstream app {
+        server app:5000;
     }
-
-    upstream Service02 {
-        server Service02:8002;
-    }
-
 
     server {
         listen 80;
 
-        location /ping {
-            proxy_pass http://Service01;
+        location / {
+            proxy_pass http://app;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
-
-        location /messages {
-            proxy_pass http://Service02;
-        }
-
     }
 }
