Microserviços, docker quebrou

--- a/Ponderada 3/src/requirements.txt
+++ b/Ponderada 3/src/requirements.txt
@@ -1,9 +1,9 @@
-fastapi==0.68.0
-uvicorn==0.15.0
-sqlalchemy==1.4.26
-jinja2==3.0.3
-python-jose==3.3.0
-python-multipart==0.0.9
-pika==1.3.2
-python-dotenv==1.0.1
-
+fastapi
+uvicorn
+sqlalchemy
+pydantic
+python-dotenv
+jose
+jinja2
+requests
+pika
