--- a/Ponderada 2/flutter-mobile-template/pubspec.yaml
+++ b/Ponderada 2/flutter-mobile-template/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^0.13.3
+  image_picker: ^0.8.4+7
   shared_preferences: ^2.0.15
   url_launcher: ^6.0.17
 
