--- a/Ponderada 3/src/docker-compose.yaml
+++ b/Ponderada 3/src/docker-compose.yaml
@@ -6,9 +6,15 @@ services:
     ports:
       - "5000:5000"
     volumes:
-      - ./test.db:/app/test.db
+      - app_data:/app
     environment:
       - PYTHONUNBUFFERED=1
+      - DATABASE_URL=sqlite:///./app/test.db
+      - RABBITMQ_HOST=rabbitmq
+      - RABBITMQ_PORT=5672
+      - RABBITMQ_DEFAULT_USER=myuser
+      - RABBITMQ_DEFAULT_PASS=mypassword
+      - RABBITMQ_QUEUE=myqueue
     depends_on:
       rabbitmq:
         condition: service_healthy
@@ -19,11 +25,8 @@ services:
       - "5672:5672"
       - "15672:15672"
     environment:
-      - RABBITMQ_HOST=${RABBITMQ_HOST}
-      - RABBITMQ_PORT=${RABBITMQ_PORT}
-      - RABBITMQ_DEFAULT_USER=${RABBITMQ_DEFAULT_USER}
-      - RABBITMQ_DEFAULT_PASS=${RABBITMQ_DEFAULT_PASS}
-      - RABBITMQ_QUEUE=${RABBITMQ_QUEUE}
+      - RABBITMQ_DEFAULT_USER=myuser
+      - RABBITMQ_DEFAULT_PASS=mypassword
     healthcheck:
       test: ["CMD", "rabbitmqctl", "status"]
       interval: 30s
@@ -33,7 +36,7 @@ services:
       sh -c "
         rabbitmq-server &
         sleep 10 &&
-        rabbitmqctl add_user myuser mypassword &&
+        rabbitmqctl list_users | grep myuser || rabbitmqctl add_user myuser mypassword &&
         rabbitmqctl set_user_tags myuser administrator &&
         rabbitmqctl set_permissions -p / myuser '.*' '.*' '.*' &&
         rabbitmqctl delete_user guest &&
@@ -42,10 +45,16 @@ services:
       "
 
   gateway:
-    build: ./nginx
+    image: nginx:alpine
     ports:
       - "8000:80"
     depends_on:
-      - rabbitmq
-      - app
-    restart: on-failure
+      app:
+        condition: service_healthy
+      rabbitmq:
+        condition: service_healthy
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+
+volumes:
+  app_data:
