--- a/Ponderada 3/src/dockerfile
+++ b/Ponderada 3/src/dockerfile
@@ -1,21 +1,17 @@
-# Use the official Python image as base image
-FROM python:3.9
+# Use a imagem oficial do Python como base
+FROM python:3.9-slim
 
-# Set environment variables
-ENV PYTHONDONTWRITEBYTECODE 1
-ENV PYTHONUNBUFFERED 1
-
-# Set the working directory in the container
+# Defina o diretório de trabalho no contêiner
 WORKDIR /app
 
-# Copy the dependencies file to the working directory
+# Copie o arquivo de dependências para o diretório de trabalho
 COPY requirements.txt .
 
-# Install any dependencies
+# Instale as dependências
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy the local code to the container image
+# Copie o restante do código da aplicação para o diretório de trabalho
 COPY . .
 
-# Command to run on container start
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "5000"]
+# Comando para rodar a aplicação
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "5000"]
