--- a/Ponderada 3/src/nginx/nginx.conf
+++ b/Ponderada 3/src/nginx/nginx.conf
@@ -1,19 +1,39 @@
-worker_processes 1;
-
-events { worker_connections 1024; }
+events {}
 
 http {
-    sendfile on;
+    upstream user_service {
+        server user-service:8000;
+    }
 
-    upstream app {
-        server app:5000;
+    upstream todo_service {
+        server todo-service:8000;
+    }
+
+    upstream image_service {
+        server image-service:8000;
     }
 
     server {
         listen 80;
 
-        location / {
-            proxy_pass http://app;
+        location /users/ {
+            proxy_pass http://user_service/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        location /todos/ {
+            proxy_pass http://todo_service/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        location /image/ {
+            proxy_pass http://image_service/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
