--- a/Ponderada 3/src/docker-compose.yaml
+++ b/Ponderada 3/src/docker-compose.yaml
@@ -2,32 +2,58 @@ version: '3.8'
 
 services:
   user-service:
-    build: ./service_user
-    ports:
-      - "8000:8000"
-    volumes:
-      - ./service_user/app:/app/app
-    environment:
-      - DATABASE_URL=sqlite:///./test.db
-
-  log-service:
-    build: ./service_log
+    build: ./service-user
+    container_name: user-service
     ports:
       - "8001:8000"
-    volumes:
-      - ./service_log/app:/app/app
-    environment:
-      - DATABASE_URL=sqlite:///./test.db
+    networks:
+      - app-network
+    depends_on:
+      - rabbitmq
 
-  image-processing-service:
-    build: ./service_image_processing
+  todo-service:
+    build: ./service-todo
+    container_name: todo-service
     ports:
       - "8002:8000"
+    networks:
+      - app-network
+    depends_on:
+      - rabbitmq
+
+  image-service:
+    build: ./service-image
+    container_name: image-service
+    ports:
+      - "8003:8000"
+    networks:
+      - app-network
+    depends_on:
+      - rabbitmq
+
+  rabbitmq:
+    image: rabbitmq:3-management
+    container_name: rabbitmq
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+    networks:
+      - app-network
+
+  nginx:
+    image: nginx:latest
+    container_name: nginx
+    ports:
+      - "80:80"
     volumes:
-      - ./service_image_processing/app:/app/app
-    environment:
-      - DATABASE_URL=sqlite:///./test.db
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - user-service
+      - todo-service
+      - image-service
+    networks:
+      - app-network
 
 networks:
-  default:
+  app-network:
     driver: bridge
