--- a/Ponderada 3/src/nginx/Dockerfile
+++ b/Ponderada 3/src/nginx/Dockerfile
@@ -1,5 +1,7 @@
-# gateway/Dockerfile
-
-FROM nginx:1.19.0
+FROM nginx:latest
 
 COPY nginx.conf /etc/nginx/nginx.conf
+
+EXPOSE 80
+
+CMD ["nginx", "-g", "daemon off;"]
