--- a/Ponderada 3/src/service-todo/dockerfile
+++ b/Ponderada 3/src/service-todo/dockerfile
@@ -1,11 +1,11 @@
-FROM python:3.9
+FROM tiangolo/uvicorn-gunicorn-fastapi:python3.9
 
 WORKDIR /app
 
-COPY requirements.txt .
+COPY ./app /app/app
+COPY main.py /app
+COPY requirements.txt /app
 
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY app/ /app/app
-
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
