Erros com compose - modules

--- a/Ponderada 3/src/service-image-processing/dockerfile
+++ b/Ponderada 3/src/service-image-processing/dockerfile
@@ -2,9 +2,7 @@ FROM tiangolo/uvicorn-gunicorn-fastapi:python3.9
 
 WORKDIR /app
 
-COPY ./app /app/app
-COPY main.py /app
-COPY requirements.txt /app
+COPY . /app
 
 RUN pip install --no-cache-dir -r requirements.txt
 
