--- a/Ponderada 3/src/docker-compose.yaml
+++ b/Ponderada 3/src/docker-compose.yaml
@@ -31,6 +31,16 @@ services:
     depends_on:
       - rabbitmq
 
+  log-service:
+    build: ./service-log
+    container_name: log-service
+    ports:
+      - "8004:8000"
+    networks:
+      - app-network
+    depends_on:
+      - rabbitmq
+
   rabbitmq:
     image: rabbitmq:3-management
     container_name: rabbitmq
@@ -51,6 +61,7 @@ services:
       - user-service
       - todo-service
       - image-service
+      - log-service
     networks:
       - app-network
 
