--- a/Ponderada 3/src/nginx/nginx.conf
+++ b/Ponderada 3/src/nginx/nginx.conf
@@ -16,16 +16,16 @@ http {
     server {
         listen 80;
 
-        location /users/ {
-            proxy_pass http://user_service/;
+        location /user/ {
+            proxy_pass http://user-service:8000/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        location /todos/ {
-            proxy_pass http://todo_service/;
+        location /todo/ {
+            proxy_pass http://todo-service:8000/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -33,7 +33,15 @@ http {
         }
 
         location /image/ {
-            proxy_pass http://image_service/;
+            proxy_pass http://image-service:8000/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        location /log/ {
+            proxy_pass http://log-service:8000/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
