atualizacoes, background ok, todo ok, login ok

--- a/Ponderada 3/src/docker-compose.yaml
+++ b/Ponderada 3/src/docker-compose.yaml
@@ -42,11 +42,14 @@ services:
       - rabbitmq
 
   rabbitmq:
-    image: rabbitmq:3-management
+    image: "rabbitmq:3-management"
     container_name: rabbitmq
     ports:
       - "5672:5672"
       - "15672:15672"
+    environment:
+      RABBITMQ_DEFAULT_USER: inteli
+      RABBITMQ_DEFAULT_PASS: inteli_secret
     networks:
       - app-network
 
