--- a/Ponderada 2/flutter-mobile-template/android/app/src/main/AndroidManifest.xml
+++ b/Ponderada 2/flutter-mobile-template/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- Permissões de leitura e escrita no armazenamento externo -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+
     <application
         android:label="flutter_template"
         android:name="${applicationName}"
