--- a/Ponderada 2/flutter-mobile-template/pubspec.yaml
+++ b/Ponderada 2/flutter-mobile-template/pubspec.yaml
@@ -39,8 +39,8 @@ dependencies:
   image_picker: ^0.8.4+7
   shared_preferences: ^2.0.15
   url_launcher: ^6.0.17
-
-
+  path_provider: ^2.0.9
+  permission_handler: ^10.2.0
 
 dev_dependencies:
   # The "flutter_lints" package below contains a set of recommended lints to
