--- a/Ponderada 2/flutter-mobile-template/pubspec.yaml
+++ b/Ponderada 2/flutter-mobile-template/pubspec.yaml
@@ -35,12 +35,12 @@ dependencies:
 
   flutter:
     sdk: flutter
-  http: ^0.13.3
-  image_picker: ^0.8.4+7
+  http: ^1.2.1
+  image_picker: ^1.1.2
   shared_preferences: ^2.0.15
   url_launcher: ^6.0.17
   path_provider: ^2.0.9
-  permission_handler: ^10.2.0
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   # The "flutter_lints" package below contains a set of recommended lints to
@@ -48,7 +48,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.0
+  flutter_lints: ^4.0.0
   flutter_test:
     sdk: flutter
 
